# podlog

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  TASK-STATUS.md  docker-compose.remote.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json
.github/workflows/: changelog.yml  ci-full-unit.yml  ci-slow.yml  ci.yml
.omx/: metrics.json
.omx/logs/: notify-fallback-2026-04-15.jsonl  omx-2026-04-15.jsonl  session-history.jsonl
.omx/state/: notify-fallback-state.json  update-check.json
apps/backup/: Dockerfile  backup.sh  restore-audio.sh  restore-db.sh
apps/explore/: Dockerfile  requirements.txt
apps/pipeline/: Dockerfile  Dockerfile.control  Dockerfile.worker  pyproject.toml  requeue_stuck.py
apps/pipeline/alembic/: env.py
apps/pipeline/alembic/versions/: 001_initial_schema.py  002_add_inference_and_speaker_columns.py  003_add_processing_duration_columns.py  004_add_episode_url_column.py  005_add_feed_mode_column.py  006_add_pgvector_and_trigram.py  007_make_processed_at_timezone_aware.py  008_add_chunks_table.py  009_add_notification_log_table.py  010_add_fireworks_observability_columns.py  011_add_diarize_step_durations_column.py  012_add_rss_author_columns.py  013_add_podcast_persons_columns.py  014_add_feed_speaker_cache.py  015_add_meta_analysis_snapshot.py  016_add_pyannote_cloud_cost_column.py  017_add_audio_file_size_bytes.py  018_add_prompt_settings.py  019_add_speaker_role.py  020_add_feed_paused_column.py  4298a0b3990f_add_job_queue_and_system_state_tables.py
apps/pipeline/app/: config.py  database.py  job_queue.py  main.py  models.py  scheduler.py  task_registry.py  worker.py
apps/pipeline/app/api/: ask.py  backfill.py  backups.py  embed.py  episodes.py  explore.py  feeds.py  hardware.py  health.py  meta_analysis.py  notifications.py  prompts.py  queue.py
apps/pipeline/app/services/: alignment.py  backup_files.py  backup_settings.py  chunking.py  digest.py  digest_formatters.py  embed.py  events.py  fireworks_audio.py  fireworks_audio_chunking.py  hardware.py  inference.py  inference_classify.py  inference_db.py  inference_helpers.py  inference_ner.py  inference_types.py  meta_analysis.py  meta_analysis_aggregations.py  notification_events.py  notification_runtime.py  notification_settings.py  notifications.py  pipeline_commands.py  prompts.py  pyannote.py  pyannote_cloud.py  rag.py  rss.py  timing_labels.py  whisper.py
apps/pipeline/app/tasks/: archive.py  backfill_chunks.py  celery_app.py  chunk.py  cleanup.py  diarize.py  download.py  embed.py  helpers.py  infer.py  ingest.py  prewarm.py  transcribe.py  transcribe_helpers.py
apps/pipeline/scripts/: redownload_missing_audio.py
apps/pipeline/tests/: conftest.py
apps/pipeline/tests/e2e/: test_full_flow.py
apps/pipeline/tests/fixtures/sample_descriptions/: feed_title_host.txt  host_guest.txt  multi_guest.txt  no_names.txt  solo_host.txt
apps/pipeline/tests/integration/: conftest.py  test_backup_script.py  test_pipeline.py  test_prune_failed_jobs.py  test_worker_idle_hook.py
apps/pipeline/tests/integration/api/: conftest.py  test_backups_retention_api.py  test_meta_analysis_api.py  test_prompts_api.py
apps/pipeline/tests/integration/services/: test_backup_settings.py  test_meta_analysis.py  test_meta_analysis_coverage.py  test_prompts_service.py  test_rag_retrieve_chunks.py
apps/pipeline/tests/unit/: _rag_shared.py  conftest.py  test_alignment.py  test_api.py  test_api_backfill.py  test_api_backups.py  test_api_embed.py  test_api_episodes_upload.py  test_api_explore.py  test_api_hardware.py  test_api_prompts.py  test_backup_files_service.py  test_backup_settings_service.py  test_celery_config.py  test_chunking.py  test_cleanup.py  test_dependency_manifest.py  test_digest.py  test_digest_formatting.py  test_digest_wiring.py  test_email_handler.py  test_embed_service.py  test_episodes_api.py  test_events.py  test_fireworks_audio_chunking.py  test_fireworks_audio_service.py  test_hardware.py  test_healthcheck_script.py  test_inference.py  test_inference_spacy.py  test_ingest.py  test_job_queue.py  test_meta_analysis_aggregations.py  test_meta_analysis_api.py  test_meta_analysis_noise_filter.py  test_meta_analysis_service.py  test_notification_config.py  test_notification_events.py  test_notification_formatting.py  test_notification_frequency_config.py  (+31 more)
apps/web/: Dockerfile  Dockerfile.test  (+10 more)
docs/: about.md  configuration.md  development.md  episode-lifecycle.md  hardware.md
issues/: 1.md
notebooks/: .gitignore
prds/: PRD-01-ingestion-pipeline.md  PRD-02-search-web-app.md  PRD-03-infrastructure.md  PRD-04-host-guest-inference.md  PRD-05-exploratory-plots.md  PRD-06-speaker-analytics-plots.md  RISKS-AND-GAPS.md
scripts/: check-npm-outdated.sh  check-web-node-version.sh  check_docs_sync.py  healthcheck-install.sh  healthcheck.py  requeue_fireworks_episodes.py  run-codex-nightly-audit.sh  test_healthcheck.py
(+462 files in other folders)
