[tool.poetry]
name = "podlog-pipeline"
version = "0.1.0"
description = "Podlog ingestion pipeline — RSS fetch, Whisper transcription, pyannote diarization"
authors = []
license = "O'Saasy"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

# Web / API
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
httpx = "^0.27.0"

# Config
pydantic-settings = "^2.2.0"

# Database
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
pgvector = "^0.3.0"

# RSS parsing
feedparser = "^6.0.11"

# Audio processing
ffmpeg-python = "^0.2.0"
python-multipart = "^0.0.22"

[tool.poetry.group.ml]
optional = true

[tool.poetry.group.ml.dependencies]
# WhisperX (CTranslate2 backend + wav2vec2 alignment)
whisperx = "^3.8.0"
torch = "^2.2.0"
torchaudio = "^2.2.0"
soundfile = ">=0.12.0"

# pyannote diarization (>=4.0 required by whisperx)
pyannote-audio = ">=3.1.0"

# spaCy NER for host/guest inference (PRD-04)
spacy = "^3.7"

# Sentence embeddings for semantic search (Level 3)
sentence-transformers = ">=2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring full Docker stack",
]
