[tool.poetry]
name = "podlog-pipeline"
version = "0.1.0"
description = "Podlog ingestion pipeline — RSS fetch, Whisper transcription, pyannote diarization"
authors = []
license = "O'Saasy"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

# Web / API
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.48.0"}
httpx = "^0.28.0"

# Config
pydantic = "^2.13.0"
pydantic-settings = "^2.2.0"

# Database
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
pgvector = "^0.4.0"

# RSS parsing
feedparser = "^6.0.11"

# Audio processing
ffmpeg-python = "^0.2.0"
python-multipart = "^0.0.22"

# Token counting for meta-analysis dashboard (#521)
tiktoken = "^0.13.0"

[tool.poetry.group.ml]
optional = true

[tool.poetry.group.ml.dependencies]
# WhisperX (CTranslate2 backend + wav2vec2 alignment)
whisperx = "^3.8.0"
torch = "^2.2.0"
torchaudio = "^2.2.0"
# Audio I/O backend for reading the pre-ffmpeg'd WAV into pyannote.
# torchaudio 2.8 registers no default backend, so without soundfile we get
# "Couldn't find appropriate backend ... format None".
soundfile = "^0.12.1"

# pyannote diarization (>=4.0 required by whisperx)
pyannote-audio = ">=3.1.0"

# Imported directly by app/services/pyannote.py for typed exception classes.
# Pinned to match the range already required transitively by whisperx (>=0.28.1)
# and transformers (<1.0); declaring it here protects us from a future upstream
# change that drops the transitive dep. See issue #657.
huggingface-hub = ">=0.28.1,<1.0"

# spaCy NER for host/guest inference (PRD-04)
spacy = "^3.7"

# Sentence embeddings for semantic search (Level 3)
sentence-transformers = ">=2.2.0"
numpy = ">=1.26,<3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.0.0"
ruff = "^0.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring full Docker stack",
]
